@@ -62,7 +62,7 @@ void DenoraFini(void)
 int do_fantasy(int argc, char **argv)
 {
     User *u;
-    char *chan;
+    char *chan, *target, *sqltarget;
 #ifdef USE_MYSQL
     MYSQL_RES *mysql_res;
 #endif
@@ -76,39 +76,49 @@ int do_fantasy(int argc, char **argv)
     }
 
     if (stricmp(argv[0], "stats") == 0) {
-        u = finduser(argv[1]);
-        if (!u->sgroup) {
-            return MOD_CONT;
+        if (argc == 3) {
+                u = finduser(argv[1]);
+                if (!u->sgroup) {
+                        return MOD_CONT;
+                }
+                target = u->nick;
+                sqltarget = sstrdup(u->sgroup);
+        } else {
+                target = strtok(argv[3], " ");
+                sqltarget = rdb_escape(target);
+                rdb_query(QUERY_HIGH, "SELECT uname FROM %s WHERE nick=\'%s\' ", AliasesTable, sqltarget);
+#ifdef USE_MYSQL
+                mysql_res = mysql_store_result(mysql);
+                if (mysql_res && mysql_num_rows(mysql_res)) {
+                        mysql_row = mysql_fetch_row(mysql_res);
+                        free(sqltarget);
+                        sqltarget = rdb_escape(mysql_row[0]);
+                } else {
+                        free(sqltarget);
+                        return MOD_CONT;
+                }
+#endif
         }
         chan = rdb_escape(argv[2]);
         cs = find_cs(argv[2]);
-        rdb_query
-            (QUERY_HIGH,
-             "SELECT * FROM %s WHERE chan=\'%s\' AND type=0 AND uname=\'%s\';",
-             UStatsTable, chan, u->sgroup);
+        rdb_query(QUERY_HIGH, "SELECT * FROM %s WHERE chan=\'%s\' AND type=0 AND uname=\'%s\';",
+             UStatsTable, chan, sqltarget);
         free(chan);
+        free(sqltarget);
 #ifdef USE_MYSQL
         mysql_res = mysql_store_result(mysql);
         if (mysql_num_rows(mysql_res) > 0) {
             SET_SEGV_LOCATION();
             while ((mysql_row = mysql_fetch_row(mysql_res)) != NULL) {
                 if (cs->flags & CS_NOTICE) {
-                    notice_lang(s_StatServ, u, STATS_USER_CHANNEL,
-                                u->nick, argv[2]);
+                    notice_lang(s_StatServ, u, STATS_USER_CHANNEL, target, argv[2]);
                     notice_lang(s_StatServ, u, STATS_MESSAGE_ONE,
-                                mysql_row[3], mysql_row[4],
-                                mysql_row[5], mysql_row[7], mysql_row[6]);
+                                mysql_row[3], mysql_row[4], mysql_row[5], mysql_row[7], mysql_row[6]);
                 } else {
-                    denora_cmd_privmsg(s_StatServ, argv[2],
-                                       getstring(NULL,
-                                                 STATS_USER_CHANNEL),
-                                       u->nick, argv[2]);
-                    denora_cmd_privmsg(s_StatServ, argv[2],
-                                       getstring(NULL,
-                                                 STATS_MESSAGE_ONE),
-                                       mysql_row[3], mysql_row[4],
-                                       mysql_row[5], mysql_row[7],
-                                       mysql_row[6]);
+                    denora_cmd_privmsg(s_StatServ, argv[2], getstring(NULL, STATS_USER_CHANNEL),
+                                target, argv[2]);
+                    denora_cmd_privmsg(s_StatServ, argv[2], getstring(NULL, STATS_MESSAGE_ONE),
+                                mysql_row[3], mysql_row[4], mysql_row[5], mysql_row[7], mysql_row[6]);
                 }
 
             }
