@@ -9,4 +9,4 @@ VERSION_MAJOR="1"
 VERSION_MINOR="4"
 VERSION_PATCH="6"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="431"
+VERSION_BUILD="432"
