@@ -4,6 +4,7 @@ Denora v1.4.6-SVN
 -------------
 
 Additions
+11/04/22 r432 Added parameter support for !stats and !gstats
 11/02/12 r423 Added support for accounts on Charybdis at burst
 11/02/12 r421 Added support for accounts on Charybdis
 11/02/11 r416 Added support for ircd-rizon
